@@ -2,6 +2,7 @@ Revision history for perl distribution App-tt
 
 0.11 Not Released
  - Fix bug where editing would split tags on "-"
+ - Converted to "subcommand" from Applify
 
 0.10 2019-02-04T09:35:24+0100
  - Fix "tt log -1" when running in January
